[gd_scene load_steps=16 format=2]

[ext_resource path="res://Objects/Player/Window_buttons/Buttons.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Fonts/pixel_2.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Objects/Player/Window_buttons/Button.gd" type="Script" id=3]
[ext_resource path="res://Graphics/Sprites/GUI/Icons of windows/Cron.png" type="Texture" id=4]
[ext_resource path="res://Graphics/Sprites/GUI/Icons of windows/Research.png" type="Texture" id=5]
[ext_resource path="res://Graphics/Sprites/GUI/Icons of windows/Hammer.png" type="Texture" id=6]
[ext_resource path="res://Graphics/Sprites/GUI/Icons of windows/Production.png" type="Texture" id=8]
[ext_resource path="res://Graphics/Sprites/GUI/Icons of windows/Stability.png" type="Texture" id=9]
[ext_resource path="res://Graphics/Sprites/GUI/Icons of windows/Hammer no.png" type="Texture" id=10]
[ext_resource path="res://Graphics/Sprites/GUI/Icons of windows/Welfare.png" type="Texture" id=11]
[ext_resource path="res://Graphics/Sprites/GUI/Icons of windows/Pluralism.png" type="Texture" id=12]
[ext_resource path="res://Graphics/Sprites/GUI/Icons of windows/Radion net.png" type="Texture" id=13]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.192157, 0.0862745, 0.109804, 1 )

[sub_resource type="DynamicFont" id=1]
size = 32
extra_spacing_char = -2
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 26
extra_spacing_char = -1
font_data = ExtResource( 2 )

[node name="Buttons" type="Panel"]
margin_right = 1920.0
margin_bottom = 78.0
custom_styles/panel = SubResource( 3 )
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 40.0
margin_right = 1920.0
margin_bottom = 78.0
custom_constants/separation = 0

[node name="Construction" type="Button" parent="HBoxContainer"]
margin_right = 196.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Строительство"
script = ExtResource( 3 )
window = "window_build_factory"

[node name="Production" type="Button" parent="HBoxContainer"]
margin_left = 196.0
margin_right = 384.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Производство"
script = ExtResource( 3 )
window = "window_production"

[node name="Budget" type="Button" parent="HBoxContainer"]
margin_left = 384.0
margin_right = 572.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Бюджет"
script = ExtResource( 3 )
window = "window_taxes"

[node name="Reforms" type="Button" parent="HBoxContainer"]
margin_left = 572.0
margin_right = 760.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Реформы"
script = ExtResource( 3 )
window = "window_reform"

[node name="Research" type="Button" parent="HBoxContainer"]
margin_left = 760.0
margin_right = 949.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Технологии"
script = ExtResource( 3 )
window = "window_research"

[node name="Parties" type="Button" parent="HBoxContainer"]
margin_left = 949.0
margin_right = 1145.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Предпарламент"
script = ExtResource( 3 )
window = "window_parties"

[node name="Diplomacy" type="Button" parent="HBoxContainer"]
margin_left = 1145.0
margin_right = 1333.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Дипломатия"
script = ExtResource( 3 )
window = "window_diplomacy"

[node name="Markets" type="Button" parent="HBoxContainer"]
margin_left = 1333.0
margin_right = 1521.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Рынки"
script = ExtResource( 3 )
window = "window_markets"

[node name="MilitaryOrders" type="Button" parent="HBoxContainer"]
margin_left = 1521.0
margin_right = 1731.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Военные заказы"
script = ExtResource( 3 )
window = "window_parties"

[node name="Population" type="Button" parent="HBoxContainer"]
margin_left = 1731.0
margin_right = 1920.0
margin_bottom = 38.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 1 )
text = "Население"
script = ExtResource( 3 )
window = "window_population"

[node name="VBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 40.0
custom_constants/separation = 0

[node name="ConstructionLabel" type="Button" parent="VBoxContainer"]
margin_right = 192.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 6 )
flat = true
expand_icon = true

[node name="UnemployedLabel" type="Button" parent="VBoxContainer"]
margin_left = 192.0
margin_right = 384.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 10 )
flat = true
expand_icon = true

[node name="ProductionLabel" type="Button" parent="VBoxContainer"]
margin_left = 384.0
margin_right = 576.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 8 )
flat = true
expand_icon = true

[node name="BudgetLabel" type="Button" parent="VBoxContainer"]
margin_left = 576.0
margin_right = 768.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
text = "142"
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="RadioNetLabel" type="Button" parent="VBoxContainer"]
margin_left = 768.0
margin_right = 960.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 13 )
flat = true
expand_icon = true

[node name="ResearchLabel" type="Button" parent="VBoxContainer"]
margin_left = 960.0
margin_right = 1152.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 5 )
flat = true
expand_icon = true

[node name="PartiesLabel" type="Button" parent="VBoxContainer"]
margin_left = 1152.0
margin_right = 1344.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
flat = true
expand_icon = true

[node name="StabilityLabel" type="Button" parent="VBoxContainer"]
margin_left = 1344.0
margin_right = 1536.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 9 )
flat = true
expand_icon = true

[node name="Pluralism" type="Button" parent="VBoxContainer"]
margin_left = 1536.0
margin_right = 1728.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 12 )
flat = true
expand_icon = true

[node name="PopulationLabel" type="Button" parent="VBoxContainer"]
margin_left = 1728.0
margin_right = 1920.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
icon = ExtResource( 11 )
flat = true
expand_icon = true
